# OmniDocBench

./: pdf_validation.py  pyproject.toml
src/omnidocbench/: pdf_validation.py
src/omnidocbench/dataset/: __init__.py  detection_dataset.py  end2end_dataset.py  md2md_dataset.py  recog_dataset.py
src/omnidocbench/metrics/: __init__.py  cal_metric.py
src/omnidocbench/registry/: __init__.py  registry.py
src/omnidocbench/task/: __init__.py  detection_eval.py  end2end_run_eval.py  recognition_eval.py
src/omnidocbench/utils/: extract.py  match.py  match_full.py  match_quick.py
